2006-03-31  Nathaniel Smith  <njs@pobox.com>

	* work.cc (apply_delta): Don't print file hashes when updating.

2006-03-31  Nathaniel Smith  <njs@pobox.com>

	* commands.cc (update): Print branch name when updating.

2006-04-01  Henry Nestler  <Henry@BigFoot.de>

	* contrib/mtbrowse.sh: Bookkeeping directory _MTN

2006-03-31  Lapo Luchini  <lapo@lapo.it>

	* po/it.po: Translated a few more strings to Italian (243 to go).

2006-03-30  Nathaniel Smith  <njs@pobox.com>

	* testsuite.at: Ah-hah, missed AT_TESTED.  Should fix the
	"monotone not found" errors people have reported.

2006-03-30  Henry Nestler  <Henry@BigFoot.de>

	* mnt.1: '--bind' for serve on host, syntax from monotone.texi

2006-03-29  Nathaniel Smith  <njs@pobox.com>

	* testsuite.at: Clean up the macros that call monotone a little.

2006-03-29  Nathaniel Smith  <njs@pobox.com>

	* .mt-ignore: Rename to .mtn-ignore.

2006-03-29  Nathaniel Smith  <njs@pobox.com>

	* NEWS: Set date.

2006-03-29  Nathaniel Smith  <njs@pobox.com>

	* Makefile.am (package_revision.txt): Whoops, missed a few spots,
	thanks to Marcel for the tip...

2006-03-29  Nathaniel Smith  <njs@pobox.com>

	* INSTALL: mtn-related tweaks.
	* monotone.spec, win32/monotone.iss: Untested mtn-related tweaks,
	and bump version to 0.26pre3.
	* debian/changelog: Bump version.
	
2006-03-29  Nathaniel Smith  <njs@pobox.com>

	* NEWS: First pass at entry for 0.26pre3.

2006-03-28  Nathaniel Smith  <njs@pobox.com>

	* revision.cc (construct_revisions_from_ancestry): Convert
	.mt-ignore to .mtn-ignore.  We have always been at war with
	Oceania.
	* tests/t_rosterify_mt_ignore.at, testsuite.at: Test it.

2006-03-28  Nathaniel Smith  <njs@pobox.com>

	* std_hooks.lua (ignore_file): Read .mtn-ignore, not .mt-ignore.
	* tests/t_mt_ignore.at, tests/t_add.at, testsuite.at: Adjust
	accordingly.
	* monotone.texi: Update accordingly.

2006-03-28  Nathaniel Smith  <njs@pobox.com>

	* tests/t_case_insensitive__MTN.at, testsuite.at: New test.
