@@ -1,3 +1,7 @@
+2006-04-01  Petr Ovtchenkov  <ptr at island.corbina.net>
+
+	* xdelta.cc: avoid dereference of iterators at end()
+
 2006-03-31  Nathaniel Smith  <njs@pobox.com>
 
 	* work.cc (apply_delta): Don't print file hashes when updating.
